# opzioni

./: Cargo.toml  README.md  testconfig.json
src/: lib.rs  manager.rs
src/config/: mod.rs  std.rs  sync.rs
