[package]
name = "opzioni"
version = "3.0.1"
edition = "2021"
authors = ["Aurelio Buonomo"]
description = "A slim and fast configuration library for Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/auribuo/opzioni"
keywords = ["configuration", "config", "serde"]
categories = ["config"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_json = { version = "1.0.64", optional = true }
serde_yaml = { version = "0.9.21", optional = true }
tracing = { version = "0.1.37", optional = true }
toml = { version = "0.8.9", optional = true }
tokio = { version = "1.36.0", optional = true, features = ["sync"] }

[dev-dependencies]
tokio = { version = "1.36.0", features = ["sync", "macros", "rt-multi-thread"] }

[features]
default = ["all"]
all = ["json", "yaml", "toml"]
json = ["dep:serde_json"]
toml = ["dep:toml"]
yaml = ["dep:serde_yaml"]
tracing = ["dep:tracing"]
tokio = ["dep:tokio"]
